Verion 0.9.45dev (?? ??? 2004)
  - Added system setting for making public access selected as a participant
    by default for new events.
  - Added patch 1006000: added time monthbar view
  - Fixed bug 1004162: user color preferences remain active after the
    admin turns "allow user color customizations" off.
  - Updated week/day/month view to not include "target" in meta-refresh
    since it will not xhtml validate.
  - Fixed bug: iCal for multiday events was adding extra day at end
Verion 0.9.44 (02 Aug 2004)
  - Fixed bug 1001054: deleting user was not deleting from webcal_asst table
  - Fixed bug 989443: http login does not work with http on newer PHP version
  - Added patch 1001078: xhtml error in week.php
  - Added patch 1000911: no CR in site_extras field when displayed
  - Added patch 1000220: removed font tag from trailer.php
  - Fixed bug in repeating event conflict checking when using "month by day"
  - Added upcoming.php page that can be used as an iframe in non-WebCalendar
    pages to present a list of upcoming events.
  - Fixed bug 960897: Could not modify user's email address if no last
    name was set
  - Fixed bug 980215: GLobal var $STARTVIEW was not declared global.
  - Fixed bug: do_redirect() calls should not have the '&' escaped into '&amp;'
  - Added patch 984544: fix ics url for public access calendar in preferences
  - Added "Today" link in trailer
  - Fixed bug 826651: Modified report of public cal. will stored under admin-user
  - Added "Copy event" option when viewing an event.  This fills in the
    edit_entry.php form with details from the event you want to copy.
  - Fixed some of the "undefined variable" errors that you get when
    global variables is turned off in php.ini.
  - Fixed bug: If user creates a report that does not include themself,
    the user will be unable to edit/delete the report.
  - Added patch 975787: allow automatic inclusion of public access events
  - Added patch 980287: added mysqli support to php-dbi.php